--- a/src/index.html
+++ b/src/index.html
@@ -721,7 +721,6 @@
                         <div class="over">
                             <img src="assets/yemek10.webp" alt="Yemek" class="recipe-bg-img" />
                         </div>
-                        
                         <a href="" class="card-title">
                             <h5>18.02.2025</h5>
                             <h3 class="text-2xl z-50">Lorem ipsum dolor →</h3>
@@ -731,6 +730,145 @@
             </div>
         </div>
     </section>
+    <section class="newest flex justify-center">
+        <div class="container flex flex-col items-center gap-5 py-20">
+            <div class="specials-title flex justify-between items-end w-full px-5">
+                <div class="specials-text flex flex-col gap-3">
+                    <h2 class="text-3xl font-medium">Yeni Gelenler</h2>
+                    <div class="bg-[#0691d6] h-1.5 w-2/3"></div>
+                </div>
+                <div class="specials-button">
+                    <button class="specials-btn py-3 px-6 border-2 font-medium rounded-lg text-lg relative overflow-hidden hover:text-white border-black cursor-pointer duration-300" type="submit">
+                        <span class="relative z-10">Tümünü Görüntüle</span>
+                        <span class="specials-btn-bg absolute left-0 top-0 h-full w-0 bg-[var(--fish-red)] transition-all duration-300 z-0"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="specials-products flex flex-wrap w-full">
+                <div class="products-box group">
+                    <div class="products-card">
+                        <div class="image-area relative">
+                            <span class="new"></span>
+                            <img src="assets/urun.webp" alt="">
+                            <div class="fast-buttons">
+                                <button>
+                                    <i class="fa-regular fa-eye text-lg"></i>
+                                </button>
+                                <button class="opencart-btn">
+                                    <i class="fa-brands fa-opencart text-lg"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="title-area">
+                            <div class="flex justify-between items-center">
+                                <span>Hardal Soslu Pane Somon Fileto</span>
+                                <i class="fa-regular fa-heart favorite-icon cursor-pointer"></i>
+                            </div>
+                            <span class="text-xs font-extralight">200gr, 4 adet</span>
+                            <span class="my-5 font-medium">300 TL</span>
+                            <div class="flex justify-between items-center text-xs font-extralight">
+                                <span>1200 TL / Paket</span>
+                                <span>Koli İçi Adet: 20</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="products-box group">
+                    <div class="products-card">
+                        <div class="image-area relative">
+                            <span class="new"></span>
+                            <img src="assets/urun.webp" alt="">
+                            <div class="fast-buttons">
+                                <button>
+                                    <i class="fa-regular fa-eye text-lg"></i>
+                                </button>
+                                <button class="opencart-btn">
+                                    <i class="fa-brands fa-opencart text-lg"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="title-area">
+                            <div class="flex justify-between items-center">
+                                <span>Balık Köftesi</span>
+                                <i class="fa-regular fa-heart favorite-icon cursor-pointer"></i>
+                            </div>
+                            <span class="text-xs font-extralight">200gr, 6 adet</span>
+                            
+                            <div class="offsale my-5 flex items-center">
+                                <i class="fa-solid fa-caret-down text-[var(--fish-red)] text-4xl"></i>
+                                <span class="ml-1">%25</span>
+                                <span class="line-through opacity-60 ml-2">500 TL</span>
+                                <span class="font-medium text-[var(--fish-red)] ml-2">375 TL</span>
+                            </div>
+                            <div class="flex justify-between items-center text-xs font-extralight">
+                                <span>1200 TL / Paket</span>
+                                <span>Koli İçi Adet: 20</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="products-box group">
+                    <div class="products-card">
+                        <div class="image-area relative">
+                            <span class="new"></span>
+                            <img src="assets/urun3.webp" alt="">
+                            <div class="fast-buttons">
+                                <button>
+                                    <i class="fa-regular fa-eye text-lg"></i>
+                                </button>
+                                <button class="opencart-btn">
+                                    <i class="fa-brands fa-opencart text-lg"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="title-area">
+                            <div class="flex justify-between items-center">
+                                <span>Balık Köftesi</span>
+                                <i class="fa-regular fa-heart favorite-icon cursor-pointer"></i>
+                            </div>
+                            <span class="text-xs font-extralight">200gr, 4 adet</span>
+                            <span class="my-5 font-medium">300 TL</span>
+                            <div class="flex justify-between items-center text-xs font-extralight">
+                                <span>1200 TL / Paket</span>
+                                <span>Koli İçi Adet: 20</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="products-box group">
+                    <div class="products-card">
+                        <div class="image-area relative">
+                            <span class="nothing"></span>
+                            <img src="assets/urun3.webp" alt="">
+                            <div class="fast-buttons">
+                                <button>
+                                    <i class="fa-regular fa-eye text-lg"></i>
+                                </button>
+                                <button class="opencart-btn">
+                                    <i class="fa-brands fa-opencart text-lg"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="title-area">
+                            <div class="flex justify-between items-center">
+                                <span>Balık Köftesi</span>
+                                <i class="fa-regular fa-heart favorite-icon cursor-pointer"></i>
+                            </div>
+                            <span class="text-xs font-extralight">200gr, 4 adet</span>
+                            <span class="my-5 font-medium">300 TL</span>
+                            <div class="flex justify-between items-center text-xs font-extralight">
+                                <span>1200 TL / Paket</span>
+                                <span>Koli İçi Adet: 20</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="flex justify-center">
+        <div class="container"></div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
