--- a/src/index.html
+++ b/src/index.html
@@ -867,7 +867,18 @@
         </div>
     </section>
     <footer class="flex justify-center">
-        <div class="container"></div>
+        <div class="container flex flex-col w-full">
+            <div class="footer-top w-full flex justify-between">
+                <div class="footer-top-left w-1/3">
+                    <div class="logo w-full h-full">
+                        <img class="aspect-square h-45" src="assets/logo.svg" alt="">
+                    </div>
+                    <span class="text-xl">E-Bültene Üye Olun</span>
+                </div>
+                <div class="footer-top-right w-2/3"></div>
+            </div>
+            <div class="footer-bottom w-full"></div>
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
